enabled and tested all payment endpoints